configuração da api externa e configuração de segurança da senha, criação do controller e services da api externa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
+#chave da api da Open Movie Database
+
+omdb.api.key=50cf1213
